refactor(backend): untangle snapshot, start guards and group membership (#90)
Aufräum-Refactors aus der finalen Review (Track R3a, Epic #94), ohne
Verhaltensänderung:

- SnapshotService trägt die Snapshot-Assembly aus dem Controller und nutzt die
  Batch-Methode CreditService#getCredits statt einer Guthabenabfrage je Nutzer
  (2·N -> 2 Abfragen).
- ExecutionStartGuard kapselt die fachlichen Start-Wächter aus
  ExecutionController#start und macht sie isoliert testbar - inklusive der
  Prüf-Reihenfolge und des bis dahin ungetesteten Standort-Wächters.
- UserGroupService#syncGroupMembership entdoppelt das setValid*-Triplikat.
- TerminalMaintenanceService führt eine Map auf einen Record statt zweier
  paralleler Maps unter demselben Korrelationsschlüssel.

Dazu die risikoarmen Kleinigkeiten des Reports: Switch-Expressions in
PricingService, Locale.ROOT beim Kleinschreiben, .toList(), entdoppelter
Mail-Aufbau.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NbJV27ZgS44SkJAXhyCanT